--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Depends:
     S4Vectors (>= 0.9.25),
     GenomicRanges,
     SummarizedExperiment (>= 1.1.6),
-    TMB (>= 1.7.6)
+    TMB (>= 1.7.6),
+    RcppEigen
 Imports:
     BiocGenerics (>= 0.7.5),
     DESeq2,
@@ -51,4 +52,4 @@ License: MIT + file LICENSE
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1.9000
 NeedsCompilation: yes
-LinkingTo: TMB, Rcpp
+LinkingTo: TMB, RcppEigen
