--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,4 +63,5 @@ importFrom("graphics", "pairs")
 importFrom("stats", "as.dist", "as.hclust", "cutree", "dist", "hclust",
            "dnorm", "pnorm", "predict", "qnorm", "rnorm")
 import(TMB)
+import(RcppEigen)
 useDynLib(LQNO_DE, .registration = TRUE)
