--- a/src/MAKEFILE
+++ b/src/MAKEFILE
@@ -1,7 +1,7 @@
 all: LQNO_DE.so
 
 LQNO_DE.so: LQNO_DE.cpp
-	Rscript --vanilla -e "TMB::compile('LQNO_DE.cpp', libinit=TRUE)"
+	Rscript --vanilla -e "TMB::compile('LQNO_DE.cpp')"
 
 clean:
 	rm -rf *o
