--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Type: Package
 Title: Analyze isomiRs and miRNAs from small RNA-seq
 Description: Characterization of miRNAs and isomiRs, clustering and
    differential expression.
+LazyData: true
 biocViews: miRNA, RNASeq,
     DifferentialExpression, Clustering
 Suggests:
@@ -18,10 +19,14 @@ Suggests:
 Depends:
     R (>= 3.4),
     DiscriMiner,
-    TMB,
+    IRanges,
+    S4Vectors (>= 0.9.25),
+    GenomicRanges,
+    SummarizedExperiment (>= 1.1.6),
+    TMB (>= 1.7.6),
     RcppEigen
 Imports:
-    BiocGenerics,
+    BiocGenerics (>= 0.7.5),
     DESeq2,
     reshape,
     tidyr,
@@ -40,11 +45,7 @@ Imports:
     stats,
     GGally,
     gamlss,
-    gamlss.dist,
-    IRanges,
-    S4Vectors,
-    GenomicRanges,
-    SummarizedExperiment
+    gamlss.dist
 Author: Lorena Pantano, Georgia Escaramis
 Maintainer: Lorena Pantano <lorena.pantano@gmail.com>
 License: MIT + file LICENSE
