--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,4 +64,4 @@ importFrom("stats", "as.dist", "as.hclust", "cutree", "dist", "hclust",
            "dnorm", "pnorm", "predict", "qnorm", "rnorm")
 import(TMB)
 import(RcppEigen)
-useDynLib(LQNO_DE, .registration = TRUE)
+useDynLib(isomiRs)
